--- a/index.html
+++ b/index.html
@@ -8,32 +8,28 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="apple-mobile-web-app-title" content="Sub-Store" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-touch-fullscreen" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"
       name="viewport"
     />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link
-      rel="Bookmark"
-      href="https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png"
-    />
-    <link
-      rel="shortcut icon"
-      href="https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png"
+    <title>Sub-Store</title>
+    <meta
+      name="description"
+      content="A sub-converter running in a Progressive Web App"
     />
     <link rel="icon" href="/favicon.ico" />
-    <title>Sub-Store</title>
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="#F8F8F8"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#303133"
+    />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <noscript>
