navbar / tabbar / i18n switcher / route / manifest  and more... (#1)
* fix: remove i18n warning on console

* chore: replace favicon

* feat: import AwesomeIcon component and created NavBar.vue

* feat: import Awesome Icons

* feat: Add manifest.json and remove needless meta tag, set theme color and add app icons to improve PWA experience

* feat: completed Nav Bar i18n and show current language

* feat: if localstorage container last language setting, read first.

* feat: created Tab Bar and set safe-bottom-area when open with PWA.

* feat: add meta obj in route meta data to provide arguments

* chore: test backdrop blur

* chore: edit README.md

* fix: fix scroll

* feat: add other tab pages and route

* feat: save locale setting in localStorage

* feat: save locale setting in localStorage

--- a/index.html
+++ b/index.html
@@ -8,30 +8,28 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link
-      rel="Bookmark"
-      href="https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png"
+    <meta
+      content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"
+      name="viewport"
     />
-    <link
-      rel="shortcut icon"
-      href="https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="https://raw.githubusercontent.com/58xinian/icon/master/Sub-Store1.png"
+    <title>Sub-Store</title>
+    <meta
+      name="description"
+      content="A sub-converter running in a Progressive Web App"
     />
     <link rel="icon" href="/favicon.ico" />
-    <title>Sub-Store</title>
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="#F8F8F8"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#303133"
+    />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <noscript>
