feat: add dark mode support for global

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <meta
       name="theme-color"
       media="(prefers-color-scheme: light)"
-      content="#F8F8F8"
+      content="#f4f4f4"
     />
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
-      content="#303133"
+      content="#121212"
     />
     <link rel="manifest" href="/manifest.json" />
   </head>
