fix: fix icon, editor text color and i18n en

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
       content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"
       name="viewport"
     />
-    <title>Sub-Store</title>
+    <title>Sub Store</title>
     <meta
       name="description"
       content="A sub-converter running in a Progressive Web App"
     />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="alternate icon"
+      href="/favicon.ico"
+      type="image/png"
+      sizes="16x16"
+    />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
     <meta
       name="theme-color"
       media="(prefers-color-scheme: light)"
