--- a/index.html
+++ b/index.html
@@ -27,16 +27,7 @@
     />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
     <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: light)"
-      content="#f4f4f4"
-    />
-    <meta
-      name="theme-color"
-      media="(prefers-color-scheme: dark)"
-      content="#121212"
-    />
+    <meta id="theme__color" name="theme-color" content="#121212" />
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
