--- a/index.html
+++ b/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
-    />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"
-      name="viewport"
-    />
-    <title>Sub Store</title>
-    <meta
-      name="description"
-      content="A sub-converter running in a Progressive Web App"
-    />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <link
-      rel="alternate icon"
-      href="/favicon.ico"
-      type="image/png"
-      sizes="16x16"
-    />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
-    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
-    <meta id="theme__color" name="theme-color" content="#121212" />
-    <link rel="manifest" href="/manifest.json" />
-  </head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" /> -->
+  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport" />
+  <title>Sub Store</title>
+  <meta name="description" content="A sub-converter running in a Progressive Web App" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="alternate icon" href="/favicon.ico" type="image/png" sizes="16x16" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+  <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
+  <meta id="theme__color" name="theme-color" content="#000" />
+  <link rel="manifest" href="/manifest.json" />
+  <style>
+    html {
+      background: #f2f2f2;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      html {
+        background: #000;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" async src="/src/splash.ts"></script>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
         properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
-    </noscript>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+        continue.</strong>
+  </noscript>
+</body>
+
 </html>
