--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   <meta id="theme__color" name="theme-color" content="#000" />
   <link rel="manifest" href="/manifest.json" />
   <style>
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
     html {
       background: #f2f2f2;
     }
