--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
   <meta id="theme__color" name="theme-color" content="#000" />
   <link rel="manifest" href="/manifest.json" />
   <style>
-    html,
     body {
       width: 100%;
       height: 100%;
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
     html {
+      width: 100%;
       background: #f2f2f2;
     }
 
