--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" /> -->
   <meta http-equiv="Expires" content="0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>Sub Store</title>
   <meta name="description" content="A sub-converter running in a Progressive Web App" />
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   <link rel="alternate icon" href="/favicon.ico" type="image/png" sizes="16x16" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
   <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
-  <meta id="theme__color" name="theme-color" content="#000" />
+  <!-- <meta id="theme__color" name="theme-color" content="#000" /> -->
   <link rel="manifest" href="/manifest.json" />
   <style>
     body {
@@ -23,6 +26,7 @@
       overflow-x: hidden;
       overflow-y: auto;
     }
+
     html {
       width: 100%;
       background: #f2f2f2;
