--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
   <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
   <!-- <meta id="theme__color" name="theme-color" content="#000" /> -->
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="/manifests.json" />
   <style>
     body {
       width: 100%;
