顶部安全距离调整

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="alternate icon" href="/favicon.ico" type="image/png" sizes="16x16" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
   <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
-  <!-- <meta id="theme__color" name="theme-color" content="#000" /> -->
+  <meta id="theme__color" name="theme-color" content="#000" />
   <link rel="manifest" href="/manifests.json" />
   <style>
     body {
