--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="version" content="__SUB_STORE_FRONT_END_VERSION__">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
