--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <style>
     body {
       width: 100%;
-      height: 100%;
+      height: 100vh;
       overflow-x: hidden;
       overflow-y: auto;
     }
